# hack-evening-2024-4

solutions/hovinen/: Cargo.toml
solutions/hovinen/src/: main.rs
