[package]
name = "hovinen"
version = "0.1.0"
edition = "2021"

# Hi there!

[dependencies]
ahash = "0.8.11"
dashmap = "6.1.0"
env_logger = "0.11.6"
io-uring = "0.7.2"
log = "0.4.22"
rayon = "1.10.0"
smallvec = "1.13.2"
tokio = { version = "1.42.0", features = ["full"] }
tokio-uring = "0.5.0"

[dev-dependencies]
googletest = "0.11.0"
tempfile = "3.14.0"
